--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,5 +1,5 @@
 app:
-  port: 8091
+  port: ${APP_PORT:8091}
   logging: debug
   eureka: 8761
   database: pys.articulo
@@ -30,6 +30,10 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
 
 logging:
   level:
