--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.4</version>
+		<version>3.3.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.pys.articulo</groupId>
-	<artifactId>articulo-service</artifactId>
+	<groupId>com.pys.common</groupId>
+	<artifactId>common-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>pys.articulo-service</name>
-	<description>pys.articulo-service</description>
+	<name>pys.common-service</name>
+	<description>pys.common-service</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -28,7 +28,7 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
-		<kotlin.version>2.0.20</kotlin.version>
+		<kotlin.version>2.0.21</kotlin.version>
 		<spring-cloud.version>2023.0.3</spring-cloud.version>
 	</properties>
 	<dependencies>
